# 9ml

./: .gitattributes  .gitignore  CLAUDE.md  Makefile  README.md  feature_list.json  mkfile
dataset/: .gitignore  README.md  pyproject.toml
dataset/data/: conversations.jsonl  dataset.jsonl  dataset_card.md  knowledge.jsonl  manifest.json
dataset/data/grpo/: tasks.json
dataset/data/raw/: examples.json
dataset/docs/plans/: 2025-01-21-dataset-from-repos.md
dataset/notebooks/: plan9_sft_colab.ipynb
dataset/plan9_dataset/: __init__.py  cli.py  clone.py  export.py  extract_knowledge.py  fetch.py  grpo_data.py  huggingface.py  index.py  multiturn.py  qemu_client.py  qemu_server.py  rewards.py  tools.py  validate.py
dataset/training/: gemma3_config.py  requirements.txt  train_grpo.py
qemu/: boot-9front.exp  boot-9front.sh  build-and-push-image.sh  copy-from-shared.sh  copy-to-shared.sh  create-shared.sh  install-9front.sh  os-helper.sh  run-cmd.sh  run-plan9-tests.sh  run-qemu.sh  run-tests.sh
src/: export.c  hello.c  llmfs.c  mkfile  model.c  modelq.c  parallel.c  parallel.h  run.c  runq.c  simd.h  simd_amd64.s  simdq_amd64.s  test_load.c  test_load_host.c  test_matmul.c  test_model_load.c  test_rmsnorm.c  test_softmax.c  test_struct_size.c  test_temp.c
test/: convert_hf_tokenizer.py  fat.c  fat.h  gemma3_generation_reference.json  generate_gemma3_reference.py  harness.c  qemu.c  qemu.h  reference.c  reference.h  test_gemma3_generation.sh
tests/: run_all_tests.sh  run_tests.py  test_file_loading.sh  test_generation.sh  test_matmul.sh  test_rmsnorm.sh  (+1 more)
(+67 files in other folders)
